# novelty_experiment

./: .env  .gitignore  README.md  evaluation.duckdb  evaluation_data.json  pyproject.toml  setup.py
evaluation_results/: false_negatives.csv  false_positives.csv  metrics_by_threshold.csv
novelty_filter/: .env  batch_processing_script.py  main.py
novelty_filter/db/: connection.py  schema.py
novelty_filter/embeddings/: openai_embeddings.py
novelty_filter/entities/: __init__.py
novelty_filter/evaluation/: create_test_set.py  evaluate_cli.py  run_evaluation.py
novelty_filter/facts/: fact.py  fact_comparison.py
